# learn-obs

./: README.md
example/HelloOBS/: CMakeLists.txt  main.cpp  util.h  util.mm  widget.cpp  widget.h  widget.ui
example/QtOBSRecord/: QtOBSRecord.pro  dialog.cpp  dialog.h  dialog.ui  main.cpp  obs-wrapper.cpp  obs-wrapper.h
